syntax = "proto3";

package datavinci.auth;

option go_package = "datavinci/internal/auth/grpc";

import "google/protobuf/timestamp.proto";

// User represents a user in the system
message User {
  string id = 1;
  string username = 2;
  string email = 3;
  repeated string roles = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

// Role represents a role in the RBAC system
message Role {
  string id = 1;
  string name = 2;
  repeated string permissions = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

// Permission represents a single permission
message Permission {
  string resource = 1;
  string action = 2;
}

// Error represents an error response
message Error {
  string code = 1;
  string message = 2;
}
